# mpl_journey

./: README.md  pyproject.toml
data/: README.md
data/CO2/: CO2.csv  README.md
data/accident-london/: README.md  accident-london.csv
data/earthquakes/: README.md  earthquakes.csv
data/economic/: README.md  economic.csv
data/footprint/: README.md
data/game-sales/: README.md  game-sales.csv
data/london/: README.md  london.geojson
data/mariokart/: README.md  mariokart.csv
data/natural-disasters/: README.md  natural-disasters.csv
data/netflix/: README.md  netflix.csv
data/newyork/: README.md  newyork.geojson
data/newyork-airbnb/: README.md
data/script/: datasets.py  generate_README.py  load_datasets.py
data/storms/: README.md
data/ufo/: README.md  ufo.csv
data/us-counties/: README.md  us-counties.geojson
data/walks/: README.md  walks.csv
data/wine/: README.md  wine.csv
data/world/: README.md  world.geojson
originals/co2_per_capita_europe/: make_plot.py
originals/co2_per_capita_world/: make_plot.py
originals/movie_length/: make_plot.py
originals/wine_quality/: make_plot.py
replicates/co2_footprint/: make_plot.py
replicates/co2_per_capita_europe/: make_plot.py
replicates/consumer_confidence_distr/: make_plot.py
replicates/consumer_confidence_timeseries/: make_plot.py
replicates/covid_confidence/: make_plot.py
replicates/covid_unemployment/: make_plot.py
replicates/doublecat/: make_plot.py
replicates/earthquakes/: make_plot.py
replicates/evolution_natural_disasters/: make_plot.py
replicates/ny_airbnb/: make_plot.py
(+5 files in other folders)
